[gd_scene load_steps=5 format=2]

[ext_resource path="res://mocraClassic/notifications/friend/add.png" type="Texture2D" id=1]
[ext_resource path="res://mocraClassic/notifications/friend/detailed_preset.gd" type="Script" id=2]
[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=3]
[ext_resource path="res://mocraClassic/notifications/detailed_notifications/preset.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1020.0
offset_bottom = -830.0
custom_minimum_size = Vector2( 900, 250 )
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 124.0 ]
}

[node name="Control" parent="." instance=ExtResource( 4 )]

[node name="iconTexture" type="TextureRect" parent="."]
offset_left = 55.0
offset_top = 48.0
offset_right = 205.0
offset_bottom = 198.0
texture = ExtResource( 1 )

[node name="typeLabel" type="Label" parent="."]
offset_left = 285.0
offset_top = 10.0
offset_right = 811.0
offset_bottom = 95.0
scale = Vector2( 0.7, 0.7 )
text = "Friend request"

[node name="playerNameLabel" type="Label" parent="."]
offset_left = 207.0
offset_top = 104.0
offset_right = 666.0
offset_bottom = 189.0
text = "xX_Killer1_Xx"

[node name="acceptButton" type="Button" parent="."]
offset_left = 754.0
offset_top = 28.0
offset_right = 824.0
offset_bottom = 113.0
theme_type_variation = "button_green"
text = "A"

[node name="declineButton" type="Button" parent="."]
offset_left = 754.0
offset_top = 113.0
offset_right = 823.0
offset_bottom = 198.0
theme_type_variation = "button_red"
text = "D"

[node name="deleteButton" type="Button" parent="."]
visible = false
offset_left = 744.0
offset_top = 80.0
offset_right = 839.0
offset_bottom = 165.0
theme_type_variation = "button_red"
text = "X"

[connection signal="pressed" from="acceptButton" to="." method="_on_acceptButton_pressed"]
[connection signal="pressed" from="declineButton" to="." method="_on_declineButton_pressed"]
[connection signal="pressed" from="deleteButton" to="." method="_on_deleteButton_pressed"]
